--- a/public/locales/ja.json
+++ b/public/locales/ja.json
@@ -35,7 +35,19 @@
     "positions": "位置",
     "gameMode": "ゲームモード",
     "currentPlayer": "現在のプレイヤー",
-    "lastLocation": "前回の位置から再開"
+    "lastLocation": "前回の位置から再開",
+    "star": {
+      "title": "🌟 ラッキースター",
+      "subtitle": "幸運が訪れる！"
+    },
+    "collision": {
+      "title": "⚡ 衝突",
+      "subtitle": "思わぬ出会い！"
+    },
+    "trap": {
+      "title": "💥 トラップ",
+      "subtitle": "挑戦に気をつけて！"
+    }
   },
   "modes": {
     "normal": {
