feat(all): 游戏优化

--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -344,7 +344,7 @@
     "blueCompleted": " Blue completed task, stays in place!"
   },
   "home": {
-    "title": "Couple's Flight Chess",
+    "title": "Couple's Game",
     "subtitle": "Warm up your love through the game",
     "features": {
       "title": "Game Features",
