--- a/public/locales/zh.json
+++ b/public/locales/zh.json
@@ -347,7 +347,7 @@
     "blueCompleted": " 蓝方 任务完成，留在原地!"
   },
   "home": {
-    "title": "情侣飞行棋",
+    "title": "情侣游戏",
     "subtitle": "让爱在游戏中升温",
     "features": {
       "title": "游戏特色",
